# adventofcode2024

./: Cargo.toml
