[package]
name = "adventofcode2024-clp"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0.94"
aocf = "0.1.21"
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
num = "0.4.3"
paste = "1.0.15"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
